--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -148,6 +148,6 @@ redFlags(proofed_data, type = "state", threshold = 0.3)
 
 Fields that had more than 3% error...
 
-```{r rfs, echo = FALSE}
+```{r rff, echo = FALSE}
 redFlags(proofed_data, type = "field", threshold = 0.3)
 ```
