--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -100,21 +100,23 @@ A: Tibble of most common errors...
 
 ```{r et, echo = FALSE}
 et <- errorTable(proofed_data, loc = "none") %>% arrange(desc(error_count))
+
+et
 ```
 
-Values associated with error in `r et$error[1]`
+Values associated with error in **`r et$error[1]`**
 
 ```{r pe_1, echo = FALSE}
 pullErrors(proofed_data, error = et$error[1])
 ```
 
-Values associated with error in `r et$error[2]`
+Values associated with error in **`r et$error[2]`**
 
 ```{r pe_2, echo = FALSE}
 pullErrors(proofed_data, error = et$error[2])
 ```
 
-Values associated with error in `r et$error[3]`
+Values associated with error in **`r et$error[3]`**
 
 ```{r pe_3, echo = FALSE}
 pullErrors(proofed_data, error = et$error[3])
@@ -124,14 +126,14 @@ pullErrors(proofed_data, error = et$error[3])
 
 **Q: What states and fields had a proportion of error that exceeded a certain threshold?**
 
-States that had more than 3% error in the data sent to the FIsh and Wildlife Service...
+States that had more than 3% error in the data sent to the Fish and Wildlife Service...
 
 ```{r rfs, echo = FALSE}
-redFlags(proofed_data, type = "state", threshold = 0.3)
+redFlags(proofed_data, type = "state", threshold = 0.1)
 ```
 
 Fields that had more than 3% error...
 
 ```{r rff, echo = FALSE}
-redFlags(proofed_data, type = "field", threshold = 0.3)
+redFlags(proofed_data, type = "field", threshold = 0.1)
 ```
